# rsmap

./: Cargo.toml  README.md  SKILL.md  flake.nix
rsmap-index/: annotations.toml  api-surface.md  cache.json  index.json  overview.md  relationships.md
src/: annotations.rs  cache.rs  layer0.rs  layer1.rs  layer2.rs  layer3.rs  main.rs  metadata.rs  model.rs  output.rs  parse.rs  resolve.rs
tests/: integration_test.rs
tests/fixtures/sample_crate/: Cargo.toml
tests/fixtures/sample_crate/src/: lib.rs  models.rs  utils.rs
tests/fixtures/sample_crate/src/engine/: eval.rs  mod.rs
