[package]
name = "rsmap"
version = "0.1.0"
edition = "2021"
description = "Generate multi-layered, LLM-friendly index files for Rust codebases"
license = "MIT"
repository = "https://github.com/zfedoran/rsmap"
readme = "README.md"
keywords = ["rust", "index", "llm", "codebase", "parser"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
cargo_metadata = "0.18"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
blake3 = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
